# vlogpp

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  main.h  rust-toolchain.toml
circuits/: adder.sv  adder.v  counter.sv  counter.v  stateful.sv  submod.sv  vlogpp_repeat_dec.sv  vlogpp_repeat_dec.v
macros/: common.h  gates.h
scripts/: build.sh  run.sh  yosys.sh  yosys.ys
src/: expr.rs  gates.rs  global_scope.rs  lib.rs  lint.rs  local_scope.rs  lut.rs  macro.rs  macro_builder.rs  main.rs  module.rs  names.rs  netlist.rs  primitive.rs  primitives.rs  recursion.rs  registry.rs  scope.rs  yosys.rs
src/sat/: eval.rs  lut.rs  mod.rs  name.rs
src/scope/: global.rs  local.rs  mod.rs
tests/: adder.rs  adder.sv  submod.rs  submod.sv  submod_state.rs  submod_state.sv
