[package]
name = "vlogpp"
version = "0.1.0"
edition = "2024"

[features]
default = ["obfuscate"]
obfuscate = ["dep:rand"]

[dependencies]
codespan-reporting = "0.13.0"
colored = "3.0.0"
delegate = "0.13.4"
indoc = "2.0.6"
ordermap = { version = "0.5.12", features = ["serde"] }
rand = { version = "0.9.2", optional = true }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
strip-ansi-escapes = "0.2.1"
sv-parser = "0.13.3"
svlint = "0.9.4"
walkdir = "2.5.0"
